--- a/src/main/resources/assets/littlethings/lang/en_US.lang
+++ b/src/main/resources/assets/littlethings/lang/en_US.lang
@@ -1,6 +1,6 @@
+tile.workbench.name=Oak Crafting Table
 tile.vanillaCraftingTable.acacia.name=Acacia Crafting Table
 tile.vanillaCraftingTable.birch.name=Birch Crafting Table
 tile.vanillaCraftingTable.darkoak.name=Dark Oak Crafting Table
 tile.vanillaCraftingTable.spruce.name=Spruce Crafting Table
 tile.vanillaCraftingTable.jungle.name=Jungle Crafting Table
-tile.vanillaCraftingTable.name=WTF
