--- a/src/main/resources/assets/littlethings/lang/en_US.lang
+++ b/src/main/resources/assets/littlethings/lang/en_US.lang
@@ -7,6 +7,9 @@ tile.littlethings:vanillaCraftingTable.spruce.name=Spruce Crafting Table
 tile.littlethings:vanillaCraftingTable.jungle.name=Jungle Crafting Table
 tile.littlethings:itemElevator.name=Item Elevator
 
+#Items
+item.littlethings:ironNugget.name=Iron Nugget
+
 #Tooltips
 tooltip.littlethings.playerSkull=Player Skull
 tooltip.littlethings.skullOwner=Skull Owner: %s
@@ -14,6 +17,7 @@ tooltip.littlethings.skullOwner=Skull Owner: %s
 #Friend Skulls
 tooltip.littlethings.skull.LilMissSpl3nd0r=Pie and Hugs
 tooltip.littlethings.skull.The_EliteAngel="I took a good shit today"-2016
+tooltip.littlethings.skull.The_EliteAngel.clean="I took a good poop today"-2016
 tooltip.littlethings.skull.CamGaming69=Moo!
 tooltip.littlethings.skull.HCGamingMC=Merk
 
