--- a/src/main/resources/assets/littlethings/lang/en_US.lang
+++ b/src/main/resources/assets/littlethings/lang/en_US.lang
@@ -20,6 +20,7 @@ tooltip.littlethings.skull.The_EliteAngel="I took a good shit today"-2016
 tooltip.littlethings.skull.The_EliteAngel.clean="I took a good poop today"-2016
 tooltip.littlethings.skull.CamGaming69=Moo!
 tooltip.littlethings.skull.HCGamingMC=Merk
+tooltip.littlethings.skull.GingerMikie=Ride more, Worry less
 
 #Containers
 container.itemElevator=Item Elevator
