Added particles, name and recipe

--- a/src/main/resources/assets/littlethings/lang/en_US.lang
+++ b/src/main/resources/assets/littlethings/lang/en_US.lang
@@ -19,6 +19,7 @@ tile.littlethings:upgradedFurnace_diamond.name=Diamond Furnace
 tile.littlethings:upgradedFurnace_emerald.name=Emerald Furnace
 
 tile.littlethings:itemElevator.name=Item Elevator
+tile.littlethings:clearGlass.name=Clear Glass
 
 #Items
 item.littlethings:ironNugget.name=Iron Nugget
