Changed messages for players

--- a/src/main/resources/assets/littlethings/lang/en_US.lang
+++ b/src/main/resources/assets/littlethings/lang/en_US.lang
@@ -53,11 +53,11 @@ tooltip.littlethings.skullOwner=Skull Owner: %s
 tooltip.littlethings.foodrating=Food Rating: %s
 
 #Friend Skulls
-tooltip.littlethings.skull.LilMissSpl3nd0r=Pie and Hugs
+tooltip.littlethings.skull.LilMissSpl3nd0r=I will hug you to death!
 tooltip.littlethings.skull.The_EliteAngel="I took a good shit today"-2016
 tooltip.littlethings.skull.The_EliteAngel.clean="I took a good poop today"-2016
-tooltip.littlethings.skull.CamGaming69=Moo!
-tooltip.littlethings.skull.HCGamingMC=Merk
+tooltip.littlethings.skull.CamGaming69="Tea and Crumpets!"
+tooltip.littlethings.skull.HCGamingMC="Shoot all your problems away!"
 tooltip.littlethings.skull.GingerMikie=Ride more, Worry less
 
 #Containers
