Removed speech marks Because they are not quotes

--- a/src/main/resources/assets/littlethings/lang/en_US.lang
+++ b/src/main/resources/assets/littlethings/lang/en_US.lang
@@ -56,8 +56,8 @@ tooltip.littlethings.foodrating=Food Rating: %s
 tooltip.littlethings.skull.LilMissSpl3nd0r=I will hug you to death!
 tooltip.littlethings.skull.The_EliteAngel="I took a good shit today"-2016
 tooltip.littlethings.skull.The_EliteAngel.clean="I took a good poop today"-2016
-tooltip.littlethings.skull.CamGaming69="Tea and Crumpets!"
-tooltip.littlethings.skull.HCGamingMC="Shoot all your problems away!"
+tooltip.littlethings.skull.CamGaming69=Tea and Crumpets!
+tooltip.littlethings.skull.HCGamingMC=Shoot all your problems away!
 tooltip.littlethings.skull.GingerMikie=Ride more, Worry less
 
 #Containers
