--- a/src/main/resources/assets/littlethings/lang/en_US.lang
+++ b/src/main/resources/assets/littlethings/lang/en_US.lang
@@ -12,7 +12,7 @@ tile.littlethings:animalChest_chicken.name=Chicken Chest
 tile.littlethings:animalChest_cow.name=Cow Chest
 tile.littlethings:animalChest_pig.name=Pig Chest
 tile.littlethings:animalChest_sheep.name=Sheep Chest
-tile.littlethings:animalChest_horse.name=Horse Chest
+tile.littlethings:animalChest_horse.name=Horse Chest [WIP]
 tile.littlethings:animalChest_dog.name=Dog Chest
 tile.littlethings:animalChest_squid.name=Squid Chest
 tile.littlethings:animalChest_zombie.name=Zombie Chest
@@ -70,6 +70,13 @@ container.animalChest.chicken=Chicken Chest
 container.animalChest.cow=Cow Chest
 container.animalChest.pig=Pig Chest
 container.animalChest.sheep=Sheep Chest
+container.animalChest.horse=Horse Chest [WIP]
+container.animalChest.dog=Dog Chest
+container.animalChest.squid=Squid Chest
+container.animalChest.zombie=Zombie Chest
+container.animalChest.skeleton=Skeleton Chest
+container.animalChest.creeper=Creeper Chest
+container.animalChest.spider=Spider Chest
 
 #Command Usage
 command.littlethings.head=/head
