--- a/src/main/resources/assets/littlethings/lang/en_US.lang
+++ b/src/main/resources/assets/littlethings/lang/en_US.lang
@@ -45,6 +45,7 @@ tile.littlethings:stainedClearGlass.red.name=Red Stained Clear Glass
 tile.littlethings:stainedClearGlass.black.name=Black Stained Clear Glass
 
 tile.littlethings:unenchantingTable.name=Unenchanting Table
+tile.littlethings:expStore.name=Experience Store
 tile.littlethings:stoneTorch.name=Stone Torch
 
 #Items
