Moved animal chests to one block id

--- a/src/main/resources/assets/littlethings/lang/en_US.lang
+++ b/src/main/resources/assets/littlethings/lang/en_US.lang
@@ -12,13 +12,23 @@ tile.littlethings:animalChest_chicken.name=Chicken Chest
 tile.littlethings:animalChest_cow.name=Cow Chest
 tile.littlethings:animalChest_pig.name=Pig Chest
 tile.littlethings:animalChest_sheep.name=Sheep Chest
-tile.littlethings:animalChest_horse.name=Horse Chest [WIP]
 tile.littlethings:animalChest_dog.name=Dog Chest
 tile.littlethings:animalChest_squid.name=Squid Chest
 tile.littlethings:animalChest_zombie.name=Zombie Chest
 tile.littlethings:animalChest_skeleton.name=Skeleton Chest
 tile.littlethings:animalChest_creeper.name=Creeper Chest
 tile.littlethings:animalChest_spider.name=Spider Chest
+
+tile.littlethings:mobChest.chicken.name=Chicken Chest
+tile.littlethings:mobChest.cow.name=Cow Chest
+tile.littlethings:mobChest.pig.name=Pig Chest
+tile.littlethings:mobChest.sheep.name=Sheep Chest
+tile.littlethings:mobChest.dog.name=Dog Chest
+tile.littlethings:mobChest.squid.name=Squid Chest
+tile.littlethings:mobChest.zombie.name=Zombie Chest
+tile.littlethings:mobChest.skeleton.name=Skeleton Chest
+tile.littlethings:mobChest.creeper.name=Creeper Chest
+tile.littlethings:mobChest.spider.name=Spider Chest
 
 tile.littlethings:upgradedFurnace_iron.name=Iron Furnace
 tile.littlethings:upgradedFurnace_gold.name=Gold Furnace
@@ -121,7 +131,6 @@ container.animalChest.chicken=Chicken Chest
 container.animalChest.cow=Cow Chest
 container.animalChest.pig=Pig Chest
 container.animalChest.sheep=Sheep Chest
-container.animalChest.horse=Horse Chest [WIP]
 container.animalChest.dog=Dog Chest
 container.animalChest.squid=Squid Chest
 container.animalChest.zombie=Zombie Chest
