--- a/src/main/resources/assets/littlethings/lang/en_US.lang
+++ b/src/main/resources/assets/littlethings/lang/en_US.lang
@@ -100,6 +100,9 @@ item.littlethings:crossbow.name=Crossbow
 item.littlethings:crossbolt.normal.name=Crossbolt
 item.littlethings:crossbolt.explosive.name=Explosive Crossbolt
 item.littlethings:crossbolt.spectral.name=Spectral Crossbolt
+item.littlethings:crossbolt.wither.name=Wither Crossbolt
+item.littlethings:crossbolt.poison.name=Poison Crossbolt
+item.littlethings:crossbolt.slowness.name=Slowness Crossbolt
 
 item.littlethings:bejeweledApple.name=Bejeweled Apple
 item.littlethings:stoneStick.name=Stone Stick
